--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a href="#certificates" class="nav__link"><i class="bx bx-award nav__icon"></i>Certificados</a>
           </li>
           <li class="nav__item">
-            <a href="#references" class="nav__link"><i class="bx bx-link-external nav__icon"></i>Referências</a>
+            <a href="#languages" class="nav__link"><i class="bx bx-link-external nav__icon"></i></a>
           </li>
         </ul>
       </div>
@@ -89,7 +89,7 @@
                 <a 
                   href="https://web.whatsapp.com/send?phone=5511978231635&text=Olá Emmanoel! Eu olhei o seu currículo e gostaria de conversar mais sobre, aguardo um retorno! :D" 
                   target="_blank" 
-                  class="home__information__color">
+                  class="home__information__color home__information__color__hover">
                   +55 (11) 97823-1635
                 </a>
               </span>
@@ -186,10 +186,10 @@
 
             <ul class="skills__data">
               <li class="skills__name">
-                <span class="skills__circle"></span> C#
+                <span class="skills__circle"></span> Tailwind CSS
               </li>
               <li class="skills__name">
-                <span class="skills__circle"></span> PHP
+                <span class="skills__circle"></span> JQuery
               </li>
               <li class="skills__name">
                 <span class="skills__circle"></span> MySQL
@@ -269,7 +269,6 @@
             </div>
           </div>
         </section>
-
         
         <!--========== REFERENCES ==========-->
         <!--<section class="references section hidden" id="references">
@@ -324,11 +323,11 @@
           <div class="interests__container bd-grid">
             <div class="interests__content">
               <i class="bx bx-headphone interests__icon"></i>
-              <span class="interests__name">Música</span>
+              <span class="interests__name">Músicas</span>
             </div>
             <div class="interests__content">
-              <i class="bx bx-movie-play interests__icon"></i>
-              <span class="interests__name">Filmes e Séries</span>
+              <i class='bx bx-code-alt interests__icon'></i>
+              <span class="interests__name">Programar</span>
             </div>
             <div class="interests__content">
               <i class="bx bxs-joystick interests__icon"></i>
@@ -336,7 +335,11 @@
             </div>
             <div class="interests__content">
               <i class="bx bxs-plane-alt interests__icon"></i>
-              <span class="interests__name">Viajar</span>
+              <span class="interests__name">Viagens</span>
+            </div>
+            <div class="interests__content">
+              <i class='bx bxl-bitcoin interests__icon'></i>
+              <span class="interests__name">Investimento</span>
             </div>
           </div>
         </section>
