update link readme and country state

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
             <div class="home__address bd-grid">
               <span class="home__information">
-                <i class="bx bx-map home__icon"></i> São Paulo - SP
+                <i class="bx bx-map home__icon"></i> Brasil - São Paulo
               </span>
               <span class="home__information">
                 <i class="bx bx-envelope home__icon"></i> emmanoelkratos2@gmail.com
