--- a/index.html
+++ b/index.html
@@ -168,37 +168,52 @@
           <div class="skills__content bd-grid">
             <ul class="skills__data">
               <li class="skills__name">
-                <span class="skills__circle"></span> HTML
-              </li>
-              <li class="skills__name">
-                <span class="skills__circle"></span> CSS
-              </li>
-              <li class="skills__name">
                 <span class="skills__circle"></span> JavaScript
+              </li>
+              <li class="skills__name">
+                <span class="skills__circle"></span> Java
+              </li>
+              <li class="skills__name">
+                <span class="skills__circle"></span> Kotlin
+              </li>
+              <li class="skills__name">
+                <span class="skills__circle"></span> Swift
               </li>
               <li class="skills__name">
                 <span class="skills__circle"></span> NodeJS
               </li>
               <li class="skills__name">
-                <span class="skills__circle"></span> ReactJS
+                <span class="skills__circle"></span> Python
+              </li>
+              <li class="skills__name">
+                <span class="skills__circle"></span> C#
               </li>
             </ul>
 
             <ul class="skills__data">
               <li class="skills__name">
+                <span class="skills__circle"></span> React/Next JS
+              </li>
+              <li class="skills__name">
                 <span class="skills__circle"></span> Tailwind CSS
               </li>
               <li class="skills__name">
-                <span class="skills__circle"></span> JQuery
+                <span class="skills__circle"></span> SCSS
               </li>
               <li class="skills__name">
-                <span class="skills__circle"></span> MySQL
+                <span class="skills__circle"></span> CSS
               </li>
               <li class="skills__name">
-                <span class="skills__circle"></span> Python
+                <span class="skills__circle"></span> HTML
               </li>
               <li class="skills__name">
-                <span class="skills__circle"></span> Em breve
+                <span class="skills__circle"></span> My SQL
+              </li>
+              <li class="skills__name">
+                <span class="skills__circle"></span> MongoDB
+              </li>
+              <li class="skills__name">
+                <span class="skills__circle"></span> ExpressJS
               </li>
             </ul>
           </div>
